--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
     "react-dom": "^18.2.0",
     "react-hooks": "^1.0.1",
     "react-paginate": "^8.1.4",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.7",
     "react-sweetalert2": "^0.5.2",
     "reactstrap": "^9.1.6",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
     "sweetalert2-react": "^0.8.3",
     "web-vitals": "^2.1.4"
   },
